--- a/index.html
+++ b/index.html
@@ -361,7 +361,8 @@
 
   </div><!--/ container-->
 
-  <!-- Portfolio Modals -->
+
+                                      <!-- Portfolio Modals -->
 
                                       <!-- HACKATHON PORTFOLIO -->
   <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
@@ -388,13 +389,13 @@
                           <ul class="list-inline item-details text-center">
 
                               <li>
-                                <a href="http://github.com/doomcat9167" target="_blank">
-                                  <button type="button" class="btn btn-info"> Github</button>
+                                <a href="https://github.com/doomcat9167/TeamVirusWebApp" target="_blank">
+                                  <button type="button" class="btn btn-info"> Github Repository</button>
                                 </a>
                               </li>
                               <li>
                                 <a href="http://quackhack.io" target="_blank">
-                                  <button type="button" class="btn btn-info">Website</button>
+                                  <button type="button" class="btn btn-info">Official Website</button>
                                 </a>
                               </li>
                               <li>
