--- a/index.html
+++ b/index.html
@@ -375,11 +375,21 @@
                           <hr class="star-primary">
                           <img src="assets/img/hack2.jpg" class="img-responsive img-centered img-rounded" alt="">
                           <hr>
-                          <p>118 college students participated from 6 states (OR, WA, CA, CO, IN, MA), 14 universities and representing 16 different majors. Over 100+ high school students, community & business leaders engaged in our weekend-long event.</p>
+                          <p>118 college students participated from 6 states (OR, WA, CA, CO, IN, MA), 14 universities and representing 16 different majors. Over 100+ high school students, community & business leaders engaged in a weekend-long event.</p>
 
                               <img src="assets/img/hack3.png" class="img-thumbnail img-rounded" alt="">
-                              Team Virus consisted of five teams: Alex Lee, Molly Steelhammer, Nick Capaltini, Adam Carlton, and Micahel Muir. With the idea of creating a game without using any technology, our team had decided to create a fast-paced king of the hill style board game.
-                            </br> Team was divided into product design and web application development.
+                              Team Virus had a different approach towards creating a game at the
+                              Hackathon.  Create a modern board game that our generation would enjoy. Traditional board games now have been replaced by console games and online games. It is more likely that board games are only played on holidays or special occasions.
+
+                              It was clear that traditional board games tend to take a long time as it lasts an hour or more. So our inital approach was to create a fast-paced strategy board game with shorter set-up and only lasts an hour at max.
+
+                              Once our protoype of the board game was created, we were constantly testing it, and adding new elements to the game that would raise the variability of the game and changes the objectives through out the game. Our final version of the game hasa mixed elements of Monopoly, Stratego, Risk and Settles of Caton.
+
+                              <img src="assets/img/webApp.png" class="img-thumbnail img-rounded" alt="">
+                              In addition to the physical board, the team had made a web application could select chance cards and roll desired amount of dices. The web application uses javascript to roll dices and select cards with specific probability, based on the card.
+
+                              One of the biggest lesson I've learned at the event was being on schedule. Many fierce competitors had awesome ideas for their games but didn't anticipated the difficulty of their project resulting in incomplete project. Our team was able to finish our final product very quickly, and was able to test the game with other competitors and visitors.  This allowed us to easily see improvements and errors the game had. I remain to believe that not only getting the project done, but continuing to furnish the game was a big part of making the board game succesful.
+                            </br>
                           </p>
                         </br>
 
