--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             <article class="wow" data-wow-delay=".3s">
 
-              <h4>3rd Place | Major League Hacking (QuackHack)</h4>
+              <h4>3rd Place | Major League Hacking</h4>
               <p>
                 <small class="text-primary"><strong>University of Oregon |</strong> January 2016</small>
               </p>
@@ -337,77 +337,88 @@
                                       <!-- HACKATHON PORTFOLIO -->
   <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-content">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-8 col-lg-offset-2">
-                      <div class="modal-body">
-                          <h2 class="text-center">Major League Hacking (QuackHack)</br><small>University of Oregon | January 2016</small></h2>
-                          <hr class="star-primary">
-                          <img src="assets/img/hack2.jpg" class="img-responsive img-centered img-rounded" alt="">
-                          <hr>
-                          <p>118 college students participated from 6 states (OR, WA, CA, CO, IN, MA), 14 universities and representing 16 different majors. Over 100+ high school students, community & business leaders engaged in our weekend-long event.</p>
+        <h2 class="text-center">Major League Hacking (QuackHack)</br><small>University of Oregon | January 2016</small></h2>
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl">
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+              <div class="modal-body">
+                <hr class="star-primary">
+                <img src="assets/img/hack2.jpg" class="img-responsive img-centered img-rounded" alt="">
+                <hr>
+                <p class="strong">118 college students participated from 6 states (OR, WA, CA, CO, IN, MA), 14 universities and representing 16 different majors. Over 100+ high school students, community & business leaders engaged in our weekend-long event.</p>
 
-                              <img src="assets/img/hack3.png" class="img-thumbnail img-rounded" alt="">
-                              Team Virus had a different approach towards creating a game at the QuackHack. Make a fast-paced board game that everyone would enjoy playing. With the rise of modern console gaming, traditional board games are now only played on special occasion such as holidays.
-                              <br><br>
-                              One of the problem that we had clearly identified in many traditional board games is that they simply take too long to play, normally lasting up to an hour. Our team had concluded that we wanted to create a fast-paced board game that combines the elements of other traditional board games including Monopoly, Strategy, Risk and Settles of Caton.
-                              <br><br>
-                              While the physical board was constructed by the product design team, the coding team had also create a web application for the board game. The web application uses javascript to roll different number of dices and select cards with specific probability based on the card.
-                              <br><br>
-                              Being able to complete the board game early allowed us to test it numerous times with the visitors at the QuackHack. I believe this was one of our main success. Even though we had thought the final product was complete, there was always room for improvements when the creators of the game weren’t playing it. This resulted in polishing the game over and over again to create the best desired board game to our team’s satisfaction.
-                          </p>
-                        </br>
+                <img src="assets/img/hack3.png" class="img-thumbnail img-rounded" alt="">
+                Team Virus had a different approach towards creating a game at the QuackHack. Make a fast-paced board game that everyone would enjoy playing. With the rise of modern console gaming, traditional board games are now only played on special occasion such as holidays.
+                <br><br>
+                One of the problem that we had clearly identified in many traditional board games is that they simply take too long to play, normally lasting up to an hour. Our team had concluded that we wanted to create a fast-paced board game that would combine elements of other traditional board games including Monopoly, Stratego, Risk and Settles of Caton.
+                <br><br>
+                While the physical board was constructed by the product design team, the coding team had created a web application for the board game. The web application uses javascript to roll different number of dices and select cards with specific probability based on the card. These card images were created using GIMP.
+                <br><br>
+                <img src="assets/img/webapp.png" class="img-responsive img-centered img-rounded" alt="">
+                Being able to complete our project early allowed us to test it numerous times with the visitors at the QuackHack. I believe this was one of our main success. Even though we had thought our final product was complete, there was always room for improvements when the creators of the board game weren’t playing it. This resulted in polishing the game over and over again to create the best desired board game to our team’s satisfaction.
+                </p>
+                </br>
+                <h3 class="text-center"> WE WON THIRD PLACE! </h3>
+                <img src="assets/img/hack1.jpg" class="img-rounded img-responsive" alt="">
+                <p> <strong>From left to right: </strong> Molly Steelhammer, Alex Lee, Michael Muir, Adam Carlton and in the center, Nick Capaldini</p>
 
-                          <h3 class="text-center"> WE WON THIRD PLACE! </h3>
-                            <img src="assets/img/hack1.jpg" class="img-rounded img-responsive" alt="">
-
-                          <p> <strong>From left to right: </strong> Molly Steelhammer, Alex Lee, Michael Muir, Adam Carlton and in the center, Nick Capaldini</p>
-                          <ul class="list-inline item-details text-center">
-
-                              <li>
-                                <a href="http://github.com/doomcat9167/teamviruswebapp" target="_blank">
-                                  <button type="button" class="btn btn-info"> Github Repository</button>
-                                </a>
-                              </li>
-                              <li>
-                                <a href="http://quackhack.io" target="_blank">
-                                  <button type="button" class="btn btn-info">Official Website</button>
-                                </a>
-                              </li>
-                              <li>
-                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                              </li>
-                          </ul>
-                      </div>
-                  </div>
+                <ul class="list-inline item-details text-center">
+                  <li>
+                    <a href="http://github.com/doomcat9167/teamviruswebapp" target="_blank">
+                      <button type="button" class="btn btn-info"> Github Repository</button>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="http://quackhack.io" target="_blank">
+                      <button type="button" class="btn btn-info">Official Website</button>
+                    </a>
+                  </li>
+                  <li>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                  </li>
+                </ul>
               </div>
+            </div>
           </div>
       </div>
+    </div>
   </div>
 
                                 <!-- JULIF's COMPETITION -->
   <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-content">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-8 col-lg-offset-2">
-                      <div class="modal-body">
-                          <h2 class="text-center">Julif's Programming Competition </br><small>University of Oregon | May 2015</small></h2>
-                          <hr class="star-primary">
-                          <img src="assets/img/julifs.jpg" class="img-responsive img-centered img-rounded" alt="">
-                          <hr>
-                          <p>In spring term each year, the CIS Department holds the Annual Julif's Programming Competition. The purpose of the competition is the encourage interest in programming among CIS majors, potential majors, and other students interested in problem solving and programming. The contest is open to UO and LCC students who have taken 100-level or 200-level CIS courses. During this activity, students have the opportunity to excercise their problem solving knowledge and programing skills in a fun and challenging environment.
-                          <br><br>
-                            My partner and I solved three problems, merely beating fourth place team by 30 seconds. While the problems were very challenging to us, solving problems with a partner in a short amount of time developed my communication and time-management skills.
-                          </p>
-                          <a href="assets/problemsets.pdf" target="_blank"><button type="button" class="btn btn-info">Problem Sets</button></a>
-                          <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                      </div>
-                  </div>
-              </div>
+        <h2 class="text-center">Julif's Programming Competition </br><small>University of Oregon | May 2015</small></h2>
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl">
+            </div>
           </div>
-      </div>
-  </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <hr class="star-primary">
+                        <img src="assets/img/julifs.jpg" class="img-responsive img-centered img-rounded" alt="">
+                        <hr>
+                        <p>In spring term each year, the CIS Department at the University of Oregon holds the Annual Julif's Programming Competition. The purpose of the competition is the encourage interest in programming among CIS majors, potential majors, and other students interested in problem solving and programming.
+                        <br><br>
+                          My partner and I solved three problems, barely beating fourth-place team by 30 seconds. While the problems were very challenging to us, solving problems with a partner in a short amount of time developed my communication and time-management skills.
+                        </p>
+                        <a href="assets/problemsets.pdf" target="_blank"><button type="button" class="btn btn-info">Problem Sets</button></a>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
   <!-- footer -->
   <footer class="text-center cv-footer">
